--- a/index.html
+++ b/index.html
@@ -1,75 +1,97 @@
-<html>
- <head>
-
-    <title>Portfolio - Tubagus Ahmad Sodik</title>
-
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&amp;display=swap" rel="stylesheet"/>
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.1/aos.css" rel="stylesheet">
-  <style>
-   body {
-            font-family: 'Inter', sans-serif;
+<!DOCTYPE html>
+<html lang="id">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Deteksi Tangan dengan TensorFlow.js</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/webrtc-adapter/9.0.1/adapter.js" integrity="sha512-3LmU0dvXag+r5tTv52DO6EuV81YXQ2MIfqmT1zfsP3VSMhPoKD7PTqTZMvNNfBdjgk4u2tlCKjuJTOpw7Pj63g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/handpose"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-backend-webgl"></script>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            height: 100vh;
+            background-color: #f0f0f0;
         }
-  </style>
+        video {
+            border: 2px solid #333;
+            width: 80%;
+            max-width: 600px;
+            margin-bottom: 10px;
+        }
+        canvas {
+            position: absolute;
+            top: 0;
+            left: 0;
+        }
+    </style>
+</head>
+<body>
 
+    <video id="video" autoplay playsinline></video>
+    <canvas id="canvas"></canvas>
 
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
- </head>
- <body class="bg-[#1A1A2E] text-white flex flex-col items-center justify-center min-h-screen relative">
-  <div class="absolute top-0 left-0 w-full h-full bg-cover bg-center" style="background-image: url('552ec189475f1d337391b02d6b0b9965.gif');">
-  </div>
-  <div class="relative z-10 flex flex-col items-center">
-   <div class="w-24 h-24 rounded-full overflow-hidden border-4 border-white">
-    <img alt="Profile picture of Tubagus Ahmad Sodik" class="w-full h-full object-cover" height="96" src="tubagus_ahmad_sodik.jpg" width="96"/>
-   </div>
-   <h1 class="mt-4 text-xl font-semibold">
-    Tubagus Ahmad Sodik
-   </h1>
-   <p class="tbsodik-typing-bio text-sm mt-1">...</p>
-   <div class="flex space-x-4 mt-4">
-    <a class="text-white text-2xl" href="https://instagram.com/tbhmdsdk">
-     <i class="fab fa-instagram">
-     </i>
-    </a>
-    <a class="text-white text-2xl" href="https://wa.me/62895325657488">
-     <i class="fab fa-whatsapp">
-     </i>
-    </a>
-    <a class="text-white text-2xl" href="https://www.linkedin.com/in/sodikun">
-        <i class="fab fa-linkedin">
-        </i>
-       </a>
-   </div>
-   <div class="mt-6 w-80 bg-white text-black rounded-full flex items-center justify-center py-2 px-4">
-    <span>
-     Link akses pribadi
-    </span>
-   </div>
-   <button class="mt-6 bg-gray-800 text-white py-2 px-6 rounded-full flex items-center">
-    <i class="fas fa-link mr-2">
-    </i>
-    Download Resume
-   </button>
-   <button class="mt-6 bg-gray-800 text-white py-2 px-6 rounded-full flex items-center">
-    <i class="fas fa-link mr-2">
-    </i>
-    Download CV
-   </button>
-  </div>
-  <div class="absolute bottom-4 left-4 text-xs text-gray-400">Souce code Portfolio Mas tb/sodik v1.1 Beta</div>
-
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.1/aos.js"></script>
-    <script src="main.js"></script>
     <script>
-        AOS.init();
+        const video = document.getElementById('video');
+        const canvas = document.getElementById('canvas');
+        const ctx = canvas.getContext('2d');
+
+        async function setupCamera() {
+            const stream = await navigator.mediaDevices.getUserMedia({
+                video: true
+            });
+            video.srcObject = stream;
+
+            return new Promise((resolve) => {
+                video.onloadedmetadata = () => {
+                    resolve(video);
+                };
+            });
+        }
+
+        async function detectHands(handpose) {
+            const predictions = await handpose.estimateHands(video);
+            if (predictions.length > 0) {
+                drawHands(predictions);
+            }
+
+            requestAnimationFrame(() => detectHands(handpose));
+        }
+
+        function drawHands(predictions) {
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
+            ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
+
+            predictions.forEach(prediction => {
+                const landmarks = prediction.landmarks;
+                for (let i = 0; i < landmarks.length; i++) {
+                    const [x, y] = landmarks[i];
+                    ctx.beginPath();
+                    ctx.arc(x, y, 5, 0, 2 * Math.PI);
+                    ctx.fillStyle = "red";
+                    ctx.fill();
+                }
+            });
+        }
+
+        async function main() {
+            await setupCamera();
+            video.play();
+            canvas.width = video.videoWidth;
+            canvas.height = video.videoHeight;
+
+            // Load the HandPose model
+            const handpose = await handpose.load();
+            console.log("Model HandPose loaded.");
+            
+            detectHands(handpose);
+        }
+
+        main();
     </script>
- </body>
+</body>
 </html>
-
-
-
-
-
